Corrigindo caminho URL dos ícones

--- a/assets/css/index/technology.css
+++ b/assets/css/index/technology.css
@@ -50,11 +50,11 @@
 }
 
 .icon--bike {
-    background-image: url(../img/icones/eletrica.svg);
+    background-image: url(../../img/icones/eletrica.svg);
 }
 
 .icon--tracker {
-    background-image: url(../img/icones/rastreador.svg);
+    background-image: url(../../img/icones/rastreador.svg);
 }
 
 .technology__benefit {
