--- a/assets/css/index/technology.css
+++ b/assets/css/index/technology.css
@@ -66,3 +66,17 @@
     color: var(--c5);
     font-size: .9rem;
 }
+
+@media screen and (min-width: 320px) {
+    .technology--container {
+        grid-template-columns: 1fr;
+    }
+    
+    .technology__title {
+        font-size: 2rem;
+    }
+
+    .technology__img {
+        display: none;
+    }
+}
