--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -18,3 +18,10 @@
     text-decoration: none;
     color: var(--font-color-default);
 }
+
+@media screen and (min-width: 320px) {
+    .header--container {
+        flex-direction: column;
+        gap: 1rem;
+    }
+}
