--- a/assets/css/index/introdution.css
+++ b/assets/css/index/introdution.css
@@ -31,3 +31,14 @@
     border-radius: 5px;
     align-self: end;
 }
+
+@media screen and (min-width: 320px) {
+    .introdution--container {
+        grid-template-columns: 1fr;
+    }
+
+    .introdution--container--content {
+        margin-bottom: 3rem;
+        text-align: center;
+    }
+}
