--- a/assets/css/utility.css
+++ b/assets/css/utility.css
@@ -76,3 +76,13 @@ body {
     width: 32px;
     height: 32px;
 }
+
+@media screen and (min-width: 320px) {
+    .container-1 {
+        padding: 0 7%;
+    }
+
+    .title-2 {
+        padding-left: 0;
+    }
+}
