--- a/assets/css/insurance/question.css
+++ b/assets/css/insurance/question.css
@@ -2,12 +2,25 @@
     padding: 4rem 0;
 }
 
-.icon--arrow--down, .icon--arrow--up {
-    background-image: url("../../img/icones/seta-abrir.svg");
+.questions__icon {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 15px;
+    height: 15px;
+}
+
+.icon--arrow--up {
+    background-image: url("../../img/icones/seta-cima.svg");
+}
+
+.icon--arrow--down {
+    background-image: url("../../img/icones/seta-baixo.svg");
 }
 
 .questions__item {
     margin-bottom: 2rem;
+    padding: 1rem;
 }
 
 .questions__item:last-child {
@@ -18,15 +31,32 @@
     background-color: var(--c1);
 }
 
+.questions--container--item {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
 .questions__title {
     margin-bottom: 4rem;
 }
 
 .questions__subtitle {
     font-weight: 600;
-    margin-bottom: 1rem;
+}
+
+.questions__subtitle::before {
+    content: "•";
+    color: var(--p1);
+    margin-right: .8rem;
 }
 
 .questions__description {
-
+    margin-left: 1.2rem;
+    max-width: 60%;
 }
+
+.questions__description--hide {
+    display: none;
+}
+
