--- a/assets/css/utility.css
+++ b/assets/css/utility.css
@@ -21,6 +21,9 @@
     --c4: #CCCCCC;
     --c5: #B2B2B2;
     --c6: #9C9C9C;
+    --c7: #717171;
+    --c8: #595959;
+    --c9: #404040;
     --c10: #2E2E2E;
     --c11: #111111;
     --p1: #FFBB00;
