--- a/assets/css/quote/product.css
+++ b/assets/css/quote/product.css
@@ -195,3 +195,25 @@
 .product__button:hover {
     cursor: pointer;
 }
+
+@media screen and (max-width: 1023px) {
+    .product--container--card, .product__form {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    .container-1 {
+        padding: 0 7%;
+    }
+
+    .product--container--content, .product--container--form {
+        padding: 2rem;
+    }
+}
+
+@media screen and (max-width: 1700px) {
+    .container-1 {
+        padding: 0 10%;
+    }   
+}
