Adicionando responsividade à página contact.html

--- a/assets/css/contact/stores.css
+++ b/assets/css/contact/stores.css
@@ -66,3 +66,19 @@
     align-items: center;
     font-weight: 600;
 }
+
+@media screen and (max-width: 767px) {
+    .stores__list {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .stores__list--information {
+        margin: 0 0 1rem 0;
+    }
+
+    .stores__text {
+        margin: 0 0 1rem .5rem;
+    }
+}
