--- a/assets/css/contact/information.css
+++ b/assets/css/contact/information.css
@@ -87,3 +87,27 @@
 .information__button:hover {
     cursor: pointer;
 }
+
+@media screen and (max-width: 767px) {
+    .container-1 {
+        padding: 0 4%;
+    }
+
+    .information--container--store, .information--container--form {
+        padding: 2rem 1rem;
+    }
+
+    .information--container--card {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    .container-1 {
+        padding: 0 7%;
+    }
+
+    .information__form {
+        grid-template-columns: 1fr;
+    }
+}
